페이지네이션으로인해 post comment 코드수정 + api 수정